--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   dart_jsonwebtoken: ^2.14.1
   table_calendar: ^3.1.3
   intl: ^0.19.0
+  razorpay_flutter: ^1.3.7
+  permission_handler: ^11.3.1
+  agora_rtc_engine: ^6.5.0
+  socket_io_client: ^3.0.2
+  flutter_markdown: ^0.7.4+3
 
 
 dev_dependencies:
@@ -79,6 +84,7 @@ flutter:
     - asset/appointment.png
     - asset/psychology.png
     - asset/call.png
+    - asset/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
