--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   agora_rtc_engine: ^6.5.0
   socket_io_client: ^3.0.2
   flutter_markdown: ^0.7.4+3
+  image_picker: ^1.1.2
+  http_parser: ^4.0.2
+  lottie: ^3.1.3
+  agora_rtm: ^1.5.9
 
 
 dev_dependencies:
@@ -84,6 +88,7 @@ flutter:
     - asset/appointment.png
     - asset/psychology.png
     - asset/call.png
+    - asset/loading.json
     - asset/
 
   # An image asset can refer to one or more resolution-specific "variants", see
